06 - SyntaticParserAnalizer/exercises/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calculator
Rule 1     calculator -> commands
Rule 2     commands -> commands command
Rule 3     commands -> <empty>
Rule 4     command -> ? ID
Rule 5     command -> ! exp
Rule 6     command -> ID = exp
Rule 7     command -> ! !
Rule 8     command -> $ ID
Rule 9     exp -> exp + term
Rule 10    exp -> exp - term
Rule 11    exp -> term
Rule 12    term -> term * factor
Rule 13    term -> term / factor
Rule 14    factor -> ID
Rule 15    term -> factor
Rule 16    factor -> NUM
Rule 17    factor -> ( exp )

Terminals, with rules where they appear

!                    : 5 7 7
$                    : 8
(                    : 17
)                    : 17
*                    : 12
+                    : 9
-                    : 10
/                    : 13
=                    : 6
?                    : 4
ID                   : 4 6 8 14
NUM                  : 16
error                : 

Nonterminals, with rules where they appear

calculator           : 0
command              : 2
commands             : 1 2
exp                  : 5 6 9 10 17
factor               : 12 13 15
term                 : 9 10 11 12 13

Parsing method: LALR

state 0

    (0) S' -> . calculator
    (1) calculator -> . commands
    (2) commands -> . commands command
    (3) commands -> .

    ?               reduce using rule 3 (commands -> .)
    !               reduce using rule 3 (commands -> .)
    ID              reduce using rule 3 (commands -> .)
    $               reduce using rule 3 (commands -> .)
    $end            reduce using rule 3 (commands -> .)

    calculator                     shift and go to state 1
    commands                       shift and go to state 2

state 1

    (0) S' -> calculator .



state 2

    (1) calculator -> commands .
    (2) commands -> commands . command
    (4) command -> . ? ID
    (5) command -> . ! exp
    (6) command -> . ID = exp
    (7) command -> . ! !
    (8) command -> . $ ID

    $end            reduce using rule 1 (calculator -> commands .)
    ?               shift and go to state 4
    !               shift and go to state 6
    ID              shift and go to state 5
    $               shift and go to state 7

    command                        shift and go to state 3

state 3

    (2) commands -> commands command .

    ?               reduce using rule 2 (commands -> commands command .)
    !               reduce using rule 2 (commands -> commands command .)
    ID              reduce using rule 2 (commands -> commands command .)
    $               reduce using rule 2 (commands -> commands command .)
    $end            reduce using rule 2 (commands -> commands command .)


state 4

    (4) command -> ? . ID

    ID              shift and go to state 8


state 5

    (6) command -> ID . = exp

    =               shift and go to state 9


state 6

    (5) command -> ! . exp
    (7) command -> ! . !
    (9) exp -> . exp + term
    (10) exp -> . exp - term
    (11) exp -> . term
    (12) term -> . term * factor
    (13) term -> . term / factor
    (15) term -> . factor
    (14) factor -> . ID
    (16) factor -> . NUM
    (17) factor -> . ( exp )

    !               shift and go to state 10
    ID              shift and go to state 14
    NUM             shift and go to state 15
    (               shift and go to state 16

    exp                            shift and go to state 11
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 7

    (8) command -> $ . ID

    ID              shift and go to state 17


state 8

    (4) command -> ? ID .

    ?               reduce using rule 4 (command -> ? ID .)
    !               reduce using rule 4 (command -> ? ID .)
    ID              reduce using rule 4 (command -> ? ID .)
    $               reduce using rule 4 (command -> ? ID .)
    $end            reduce using rule 4 (command -> ? ID .)


state 9

    (6) command -> ID = . exp
    (9) exp -> . exp + term
    (10) exp -> . exp - term
    (11) exp -> . term
    (12) term -> . term * factor
    (13) term -> . term / factor
    (15) term -> . factor
    (14) factor -> . ID
    (16) factor -> . NUM
    (17) factor -> . ( exp )

    ID              shift and go to state 14
    NUM             shift and go to state 15
    (               shift and go to state 16

    exp                            shift and go to state 18
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 10

    (7) command -> ! ! .

    ?               reduce using rule 7 (command -> ! ! .)
    !               reduce using rule 7 (command -> ! ! .)
    ID              reduce using rule 7 (command -> ! ! .)
    $               reduce using rule 7 (command -> ! ! .)
    $end            reduce using rule 7 (command -> ! ! .)


state 11

    (5) command -> ! exp .
    (9) exp -> exp . + term
    (10) exp -> exp . - term

    ?               reduce using rule 5 (command -> ! exp .)
    !               reduce using rule 5 (command -> ! exp .)
    ID              reduce using rule 5 (command -> ! exp .)
    $               reduce using rule 5 (command -> ! exp .)
    $end            reduce using rule 5 (command -> ! exp .)
    +               shift and go to state 19
    -               shift and go to state 20


state 12

    (11) exp -> term .
    (12) term -> term . * factor
    (13) term -> term . / factor

    +               reduce using rule 11 (exp -> term .)
    -               reduce using rule 11 (exp -> term .)
    ?               reduce using rule 11 (exp -> term .)
    !               reduce using rule 11 (exp -> term .)
    ID              reduce using rule 11 (exp -> term .)
    $               reduce using rule 11 (exp -> term .)
    $end            reduce using rule 11 (exp -> term .)
    )               reduce using rule 11 (exp -> term .)
    *               shift and go to state 21
    /               shift and go to state 22


state 13

    (15) term -> factor .

    *               reduce using rule 15 (term -> factor .)
    /               reduce using rule 15 (term -> factor .)
    +               reduce using rule 15 (term -> factor .)
    -               reduce using rule 15 (term -> factor .)
    ?               reduce using rule 15 (term -> factor .)
    !               reduce using rule 15 (term -> factor .)
    ID              reduce using rule 15 (term -> factor .)
    $               reduce using rule 15 (term -> factor .)
    $end            reduce using rule 15 (term -> factor .)
    )               reduce using rule 15 (term -> factor .)


state 14

    (14) factor -> ID .

    *               reduce using rule 14 (factor -> ID .)
    /               reduce using rule 14 (factor -> ID .)
    +               reduce using rule 14 (factor -> ID .)
    -               reduce using rule 14 (factor -> ID .)
    ?               reduce using rule 14 (factor -> ID .)
    !               reduce using rule 14 (factor -> ID .)
    ID              reduce using rule 14 (factor -> ID .)
    $               reduce using rule 14 (factor -> ID .)
    $end            reduce using rule 14 (factor -> ID .)
    )               reduce using rule 14 (factor -> ID .)


state 15

    (16) factor -> NUM .

    *               reduce using rule 16 (factor -> NUM .)
    /               reduce using rule 16 (factor -> NUM .)
    +               reduce using rule 16 (factor -> NUM .)
    -               reduce using rule 16 (factor -> NUM .)
    ?               reduce using rule 16 (factor -> NUM .)
    !               reduce using rule 16 (factor -> NUM .)
    ID              reduce using rule 16 (factor -> NUM .)
    $               reduce using rule 16 (factor -> NUM .)
    $end            reduce using rule 16 (factor -> NUM .)
    )               reduce using rule 16 (factor -> NUM .)


state 16

    (17) factor -> ( . exp )
    (9) exp -> . exp + term
    (10) exp -> . exp - term
    (11) exp -> . term
    (12) term -> . term * factor
    (13) term -> . term / factor
    (15) term -> . factor
    (14) factor -> . ID
    (16) factor -> . NUM
    (17) factor -> . ( exp )

    ID              shift and go to state 14
    NUM             shift and go to state 15
    (               shift and go to state 16

    exp                            shift and go to state 23
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 17

    (8) command -> $ ID .

    ?               reduce using rule 8 (command -> $ ID .)
    !               reduce using rule 8 (command -> $ ID .)
    ID              reduce using rule 8 (command -> $ ID .)
    $               reduce using rule 8 (command -> $ ID .)
    $end            reduce using rule 8 (command -> $ ID .)


state 18

    (6) command -> ID = exp .
    (9) exp -> exp . + term
    (10) exp -> exp . - term

    ?               reduce using rule 6 (command -> ID = exp .)
    !               reduce using rule 6 (command -> ID = exp .)
    ID              reduce using rule 6 (command -> ID = exp .)
    $               reduce using rule 6 (command -> ID = exp .)
    $end            reduce using rule 6 (command -> ID = exp .)
    +               shift and go to state 19
    -               shift and go to state 20


state 19

    (9) exp -> exp + . term
    (12) term -> . term * factor
    (13) term -> . term / factor
    (15) term -> . factor
    (14) factor -> . ID
    (16) factor -> . NUM
    (17) factor -> . ( exp )

    ID              shift and go to state 14
    NUM             shift and go to state 15
    (               shift and go to state 16

    term                           shift and go to state 24
    factor                         shift and go to state 13

state 20

    (10) exp -> exp - . term
    (12) term -> . term * factor
    (13) term -> . term / factor
    (15) term -> . factor
    (14) factor -> . ID
    (16) factor -> . NUM
    (17) factor -> . ( exp )

    ID              shift and go to state 14
    NUM             shift and go to state 15
    (               shift and go to state 16

    term                           shift and go to state 25
    factor                         shift and go to state 13

state 21

    (12) term -> term * . factor
    (14) factor -> . ID
    (16) factor -> . NUM
    (17) factor -> . ( exp )

    ID              shift and go to state 14
    NUM             shift and go to state 15
    (               shift and go to state 16

    factor                         shift and go to state 26

state 22

    (13) term -> term / . factor
    (14) factor -> . ID
    (16) factor -> . NUM
    (17) factor -> . ( exp )

    ID              shift and go to state 14
    NUM             shift and go to state 15
    (               shift and go to state 16

    factor                         shift and go to state 27

state 23

    (17) factor -> ( exp . )
    (9) exp -> exp . + term
    (10) exp -> exp . - term

    )               shift and go to state 28
    +               shift and go to state 19
    -               shift and go to state 20


state 24

    (9) exp -> exp + term .
    (12) term -> term . * factor
    (13) term -> term . / factor

    +               reduce using rule 9 (exp -> exp + term .)
    -               reduce using rule 9 (exp -> exp + term .)
    ?               reduce using rule 9 (exp -> exp + term .)
    !               reduce using rule 9 (exp -> exp + term .)
    ID              reduce using rule 9 (exp -> exp + term .)
    $               reduce using rule 9 (exp -> exp + term .)
    $end            reduce using rule 9 (exp -> exp + term .)
    )               reduce using rule 9 (exp -> exp + term .)
    *               shift and go to state 21
    /               shift and go to state 22


state 25

    (10) exp -> exp - term .
    (12) term -> term . * factor
    (13) term -> term . / factor

    +               reduce using rule 10 (exp -> exp - term .)
    -               reduce using rule 10 (exp -> exp - term .)
    ?               reduce using rule 10 (exp -> exp - term .)
    !               reduce using rule 10 (exp -> exp - term .)
    ID              reduce using rule 10 (exp -> exp - term .)
    $               reduce using rule 10 (exp -> exp - term .)
    $end            reduce using rule 10 (exp -> exp - term .)
    )               reduce using rule 10 (exp -> exp - term .)
    *               shift and go to state 21
    /               shift and go to state 22


state 26

    (12) term -> term * factor .

    *               reduce using rule 12 (term -> term * factor .)
    /               reduce using rule 12 (term -> term * factor .)
    +               reduce using rule 12 (term -> term * factor .)
    -               reduce using rule 12 (term -> term * factor .)
    ?               reduce using rule 12 (term -> term * factor .)
    !               reduce using rule 12 (term -> term * factor .)
    ID              reduce using rule 12 (term -> term * factor .)
    $               reduce using rule 12 (term -> term * factor .)
    $end            reduce using rule 12 (term -> term * factor .)
    )               reduce using rule 12 (term -> term * factor .)


state 27

    (13) term -> term / factor .

    *               reduce using rule 13 (term -> term / factor .)
    /               reduce using rule 13 (term -> term / factor .)
    +               reduce using rule 13 (term -> term / factor .)
    -               reduce using rule 13 (term -> term / factor .)
    ?               reduce using rule 13 (term -> term / factor .)
    !               reduce using rule 13 (term -> term / factor .)
    ID              reduce using rule 13 (term -> term / factor .)
    $               reduce using rule 13 (term -> term / factor .)
    $end            reduce using rule 13 (term -> term / factor .)
    )               reduce using rule 13 (term -> term / factor .)


state 28

    (17) factor -> ( exp ) .

    *               reduce using rule 17 (factor -> ( exp ) .)
    /               reduce using rule 17 (factor -> ( exp ) .)
    +               reduce using rule 17 (factor -> ( exp ) .)
    -               reduce using rule 17 (factor -> ( exp ) .)
    ?               reduce using rule 17 (factor -> ( exp ) .)
    !               reduce using rule 17 (factor -> ( exp ) .)
    ID              reduce using rule 17 (factor -> ( exp ) .)
    $               reduce using rule 17 (factor -> ( exp ) .)
    $end            reduce using rule 17 (factor -> ( exp ) .)
    )               reduce using rule 17 (factor -> ( exp ) .)

